@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.1.1"
 #define RUBY_RELEASE_DATE "2014-02-06"
-#define RUBY_PATCHLEVEL 26
+#define RUBY_PATCHLEVEL 27
 
 #define RUBY_RELEASE_YEAR 2014
 #define RUBY_RELEASE_MONTH 2
